# lakeformation-terraform

./: .envrc  .gitignore  .justfile  README.md  pyproject.toml
local_scripts/: one.csv  run_glue_job.py  utils_run_glue_job.py
src/: glue_job.py  glue_job_insert_governed_table.py  run_glue_job.py  utils_run_glue_job.py
src/glue_job/: glue_job.py
src/glue_utils/: glue_util.py
terraform/: iam.tf  logging.tf  s3.tf  service.tf
terraform_cloud_user/: iam.tf  s3.tf
terraform_data_engineer/: s3.tf
tests/: test_one.py
