[tool.poetry]
name = "glue_cloud_guru"
version = "0.1.0"
description = "messsing around with glue on cloud guru"
authors = ["Chad Upjohn <chad.upjohn@veranahealth.com>"]

[tool.poetry.dependencies]
python = "~3.7"
botocore = "1.20.100"
boto3 = "1.17.100"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^21.10b0"
pytest = "^6.2.5"
ipython = "^7.29.0"
jupyter = "^1.0.0"
flake8 = "^4.0.1"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
src_paths = ["tests"]
multi_line_output=3
include_trailing_comma="True"
force_grid_wrap=0
use_parentheses="True"
line_length=120
skip=".vscode, .tox, .git"
default_section="THIRDPARTY"
sections="FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.pytest.ini_options]
addopts = "--strict-markers -v"
markers = [
    "unit_test",
    "spark_unit_test",
]
testpaths = "tests"
filterwarnings = [
    "ignore:Using or importing the ABCs",
    "ignore:the imp module is deprecated in favour of importlib",
]

[tool.black]
line-length = 120
exclude = '''
/(
  # Directories
    \.eggs
  | \.git
  | \.vscode
  | \.tox
  | \.venv
  | \.ropeproject
  | build
  | venv
  | .*egg-info
)/
'''
